--- a/package.json
+++ b/package.json
@@ -17,16 +17,26 @@
   },
   "homepage": "https://github.com/xuyuexiong/aboutES6#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "connect-livereload": "^0.6.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
+    "gulp-live-server": "0.0.31",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.3.0",
+    "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "require-dir": "^1.0.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.14.0",
+    "webpack": "^4.15.0",
+    "webpack-cli": "^3.0.8",
     "webpack-stream": "^4.0.3",
     "yargs": "^12.0.1"
   }
