--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "webpack-cli": "^3.0.8",
     "webpack-stream": "^4.0.3",
     "yargs": "^12.0.1"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "mockjs": "^1.0.1-beta3"
   }
 }
